# portfolio-dashboard

./: .gitignore  LICENSE  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-do.yml  deploy-hz.yml.old  deploy.yml
grafana/: Dockerfile
grafana/provisioning/datasources/: sqlite.yaml
nginx/conf.d/: default.conf
processor/: Dockerfile  pyproject.toml
processor/src/: app.py  constants.py  processor.py  test_ibkr.py
processor/src/models/: api_models.py
processor/src/utils/: db_operations.py  df_operations.py  file_operations.py
src/: constants.py  processor.py
src/utils/: df_operations.py
