[tool.poetry]
name = "portfolio-dashboard"
version = "1.0.1"
description = ""
authors = ["dparro <david.parro.sp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
ib-insync = "^0.9.86"
nest-asyncio = "^1.6.0"
pandas = "^2.2.3"
black = "^24.10.0"
flask = "^3.1.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]